# SapphireEngine

./: .gitignore  CMakeLists.txt  CMakeSettings.json  README.md  SapphireEngine.cpp  SapphireEngine.h  build.bat  clear.bat  move.bat
CoreLib/: CMakeLists.txt  CommonException.cpp  File.cpp  File.h  Object.h  UString.h
CoreLib.Serializer/: CMakeLists.txt
Sapphire/: AppInstance.h  Application.cpp  Application.h  CMakeLists.txt  EngineAppInstance.cpp  EngineAppInstance.h  EngineException.h  EngineManager.h  ImGuiImpl.cpp  ImGuiImpl.h  Light.cpp  Light.h  Logger.cpp  Logger.h  MObject.cpp  MObject.h  Math.h  Node.cpp  Node.h  PreLoad.h  Resource.cpp  Resource.h  Scene.cpp  Scene.h  Screen.cpp  Screen.h  Shader.cpp  Shader.h  ShaderProgram.cpp  ShaderProgram.h  Time.cpp  Time.h  _include.h
Sapphire/Assets/: AssetImporter.cpp  AssetImporter.h  AssetObject.h  CubeMap.cpp  CubeMap.h  Material.cpp  Material.h  Mesh.cpp  Mesh.h  Model.cpp  Model.h  ScriptableAsset.cpp  ScriptableAsset.h  TextAsset.h  Texture2D.cpp  Texture2D.h  _include.h
Sapphire/Components/: Camera.cpp  Camera.h  Component.cpp  Component.h  FreeCamera.cpp  FreeCamera.h  MeshContainer.h  MeshRenderer.cpp  MeshRenderer.h  Renderer.h  _include.h
Sapphire/InputDevice/: AxisDeviceBase.h  Input.cpp  Input.h  KeyAxisDevice.h  KeyCode.h  MouseAxisDevice.h
Sapphire/Light/: Light.cpp  Light.h
Sapphire/Math/: Color.cpp  Color.h  Matrix.cpp  Quaternion.cpp  Vector3.h  Vertex.h  _include.h
Sapphire/PBRPipeline/: PBRRenderer.cpp  PBRRenderer.h  PBRTexture.cpp  PBRTexture.h
Sapphire/Private/: InputInterface.h  RenderInterface.h  ResourceInterface.h  SystemInterface.h
Sapphire/RenderPipelines/: ScriptablePipeline.cpp  ScriptablePipeline.h
Sapphire/UnitType/: Color.cpp  Matrix.cpp  Matrix.h  Quaternion.cpp  Quaternion.h  Vector2.h  Vector4.h  Vertex.h
Sapphire/Utility/: Measure.cpp  Measure.h  MeshBuilder.cpp  MeshBuilder.h
SapphireEditor/: CMakeLists.txt  Editor.h  Selection.h
SapphireEditor/Windows/: ConsoleWindow.cpp  ConsoleWindow.h  DockspaceWindow.cpp  DockspaceWindow.h  EditorWindow.cpp  EditorWindow.h  EditorWindowManager.cpp  EditorWindowsManager.h  MainMenuBarWindow.cpp  MainMenuBarWindow.h  OutlinerWindow.cpp  OutlinerWindow.h  OutputWindow.cpp  OutputWindow.h  ProjectWindow.cpp  (+5 more)
SapphireEngine/: Application.cpp  Application.h  CMakeLists.txt  EngineException.h  EngineManager.h  Light.cpp  Light.h  Logger.cpp  Logger.h  MObject.h  Math.h  Node.cpp  Node.h  PreLoad.h  RenderCamera.cpp  RenderCamera.h  Resource.cpp  Resource.h  Scene.cpp  Scene.h  Screen.cpp  Screen.h  Shader.cpp  Shader.h  ShaderProgram.cpp  ShaderProgram.h  Time.cpp  Time.h  _include.h
include/: CMakeLists.txt
src/: CMakeLists.txt
(+145 files in other folders)
